--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ documentation = "https://mgattozzi.github.io/github-rs"
 
 [dependencies]
 hyper = { git = "https://github.com/hyperium/hyper" }
-hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
+hyper-rustls = { git = "https://github.com/ctz/hyper-rustls", branch = "hyper-current" }
 error-chain = "0.10"
 tokio-core = "0.1"
 futures = "0.1"
